front/src/style/globals/_channels.scss
//  channels stuff
@mixin two-images {
  margin-right: 1em;
  position: relative;
  width: 3.5em;
  height: 3.5em;
  &.large {
    width: 15em;
    height: 15em;
    img {
      width: 11em;
    }
  }
  img {
    width: 2.5em;
    position: absolute;
    &:last-child {
      bottom: 0;
      left: 0;
    }
    &:first-child {
      top: 0;
      right: 0;
    }
  }
}
.two-images {
  @include two-images;
}
.channel-entry-card, .channel-serie-card {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: space-between;
  .controls {
    margin-right: 1em;
  }
  .image {
    width: 3em;
    height: 3em;
    margin-right: 1em;
    line-height: 3em;
    text-align: center;
    font-weight: bold;
  }
  .two-images {
    @include two-images;
  }
  .content {
    flex-grow: 1;
  }
}
.album-entries,
.artist-entries {
  > div {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 3.5rem;
  }
  .content {
    flex-grow: 1;
  }
  .row {
    border-bottom: 1px solid var(--border-color);
  }
}
.ui.artist-label {
  .icon {
    width: 2em;
  }
  &.rounded {
    border-radius: 5em;
    padding: 0.2em 0.75em 0.2em 0.2em;
    line-height: 2em;
    img {
      border-radius: 50%;
      vertical-align: middle;
    }
  }
}

.album-entry,
.artist-entry,
.artist-entries.row,
.album-entries.row {
  .ui.really.tiny.button.play-button {
    visibility: hidden;
  }
  .ui.floating.dropdown {
    visibility: hidden;
  }
  .ui.favorite-icon {
    visibility: hidden;
  }
  .ui.favorite-icon.pink {
    visibility: visible;
  }
  .actions {
    display: block;
    max-width: 2rem;
    width: 100%;
  }
  .actions.one.wide.left.floated.column {
    width: 3% !important;
  }
  .content,
  .meta,
  .image {
    user-select: none;
  }
  .helper {
    display: inline-block;
    height: 100%;
    vertical-align: middle;
  }
  .ui.artist-track.mini.image {
    top: 0;
    bottom: 0;
    position: absolute;
    margin: auto;
  }
}

.album-entry:hover,
.artist-entry:hover {
  cursor: pointer;

  // explicitly style the button as if it was hovered itself
  .ui.icon.really.tiny.button.play-button {
    color: var(--main-color);
    visibility: visible;
    display: contents;
    left: auto;
    right: auto;
  }
  .ui.floating.dropdown {
    visibility: visible;
  }
  .ui.favorite-icon {
    visibility: visible;
  }
}

.album-entry, .album-entries .artist-entry, .artist-entries .channel-entry-card {
  border-radius: 5px;
  padding: 0.5em;
  > div {
    padding: 0.25em;
    &:not(:last-child) {
      margin-right: 0.25em;
    }
  }
  .favorite-icon.tiny.button {
    border: none !important;
    padding: 0 !important;
    margin: 0 0.5em;
    transition: all ease-in-out;
  }
}

.album-entry,  .artist-entry, .channel-entry-card {
  &.active {
    background: rgba(155, 155, 155, 0.2);
  }
  &:hover {
    background: rgba(155, 155, 155, 0.1);
  }
}
.channel-image {
  border: 1px solid rgba(0, 0, 0, 0.15);
  background-color: white;
  border-radius: 0.3em;
  &.large {
    width: 8em !important;
  }
}
.channel-type.field .radio {
  display: block;
  padding: 1.5em;
  &.selected {
    background-color: rgba(0, 0, 0, 0.05);
  }
}

